# ananke

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  ananke-fakeworker  go.mod  go.sum
.github/workflows/: p0b-renderer-public.yml
cmd/ananke/: main.go
cmd/ananke-fakeworker/: main.go
cmd/ananke-supervisor/: main.go
contracts/: mac2-accessibility.json
contracts/p0a/: frozen-inputs.sha256
contracts/p1a/: verify.mjs
contracts/p1c/: verify.mjs
contracts/p2a/: verify.mjs
contracts/p2c/: verify.mjs
contracts/p3a/: verify.mjs
contracts/p3d/: verify.mjs
contracts/p3f/: verify.mjs
contracts/p4/: verify.mjs
docs/: experiment-ledger.md  gui-v0.1-design.md  handoff.md  ui-reference-audit.md
docs/adr/: 0001-use-go-for-core-and-bootstrap.md  0002-supervisor-lifecycle-identity-model.md  0003-cleanup-state-machine-and-finalization-outbox.md  0004-select-json-schema-quicktype-for-p0a-codegen.md  README.md
docs/experiments/: mac-native-e2e-contract.md  p0a-schema-codegen-contract.md  p0b-renderer-public-bootstrap-contract.md  (+15 more)
gui/: index.html  package-lock.json  package.json  tsconfig.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
reports/: blackbox-lifecycle.json  mutation-proof.json  stress-lifecycle.json  verification.json
scripts/: blackbox_lifecycle.py  harness_support.py  mutation_proof.py  stress_lifecycle.py  test_candidate_manifest.py  test_harness_support.py  test_mutation_proof.py  test_stress_lifecycle.py  verify.py
(+232 files in other folders)
