[package]
name = "ananke-gui"
version = "0.1.0"
description = "Ananke lifecycle desktop shell"
authors = ["Ananke"]
edition = "2024"

[lib]
name = "ananke_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
